Committing production Geolocation prior to modifying

--- a/customized-plugins/Geolocation/plugin.ini
+++ b/customized-plugins/Geolocation/plugin.ini
@@ -1,10 +1,11 @@
 [info]
 name="Geolocation"
-author="Center for History & New Media"
+author="Roy Rosenzweig Center for History and New Media"
 description="Adds location info and maps to Omeka"
-link="http://omeka.org/codex/Plugins/Geolocation"
-omeka_minimum_version="1.3"
-omeka_tested_up_to="1.3"
+license="GPLv3"
+link="http://omeka.org/codex/Plugins/Geolocation_2.0"
+support_link="http://omeka.org/forums/forum/plugins"
+omeka_minimum_version="2.0.3"
+omeka_target_version="2.0.3"
 optional_plugins="Contribution"
-version="1.2"
-tags="mapping, metadata"
+version="2.0.1"
